# offload_test

./: .gitignore  CMakeLists.txt  README.md
src/eigen3/: CMakeLists.txt  main.cpp
src/openmp/: CMakeLists.txt  main.cpp
src/sycl/: CMakeLists.txt  main.cpp
